@@ -1,3 +1,7 @@
+2005-02-05
+	* moved getopt into util.c to make compiling on windows easier
+	* fixed handling of prebid result when auction has ended
+
 2005-01-31
 	* 2.10.0 released
 
